--- a/src/modules/email/templates/update-email.hbs
+++ b/src/modules/email/templates/update-email.hbs
@@ -1,7 +1,7 @@
 <html lang='fr'>
   <head>
     <meta charset='UTF-8' />
-    <title>Code de vérification</title>
+    <title>Changement d'adresse e-mail - Code de vérification</title>
   </head>
   <body
     style='font-family: Arial, sans-serif; background-color: #f9f9f9; margin: 0; padding: 0;'
@@ -12,11 +12,13 @@
 
       <!-- Contenu principal -->
       <div style='padding: 20px;'>
-        <h2 style='color: #015845;'>Bienvenue sur Rociny</h2>
+        <h2 style='color: #015845;'>Changement d'adresse e-mail</h2>
         <p>Bonjour,</p>
-        <p>Merci de vous être inscrit sur Rociny. Pour finaliser la création de
-          votre compte, veuillez utiliser le code de vérification ci-dessous :</p>
-        <h3 style='color: #015845;'>Vérification de votre adresse e-mail</h3>
+        <p>Vous avez demandé à modifier votre adresse e-mail sur Rociny. Pour
+          confirmer ce changement, veuillez entrer le code de vérification
+          ci-dessous dans l'application :</p>
+
+        <h3 style='color: #015845;'>Votre code de vérification</h3>
         <div style='text-align: center; margin: 30px 0;'>
           <span
             style='font-size: 32px; font-weight: bold; color: #015845; background: #e8f5f1; padding: 10px 20px; border-radius: 8px;'
@@ -27,7 +29,7 @@
 
         <p>Ce code est valable pendant 5 minutes.</p>
         <p>Si vous n'êtes pas à l'origine de cette demande, vous pouvez ignorer
-          cet e-mail.</p>
+          cet e-mail et aucune modification ne sera effectuée.</p>
 
         <p style='margin-top: 40px;'>L’équipe Rociny</p>
       </div>
